:sparkles:  Devolucao e historico de aluguel
Adicao da listagem de alugueis de carro associado a um usuário; Registro de devolucao do carro
