# src/modules/rentals/infra/typeorm/entities/Rental.ts
@@ -2,15 +2,23 @@ import {
   Column,
   CreateDateColumn,
   Entity,
+  JoinColumn,
+  ManyToOne,
   PrimaryColumn,
   UpdateDateColumn,
 } from 'typeorm';
 import { v4 as uuid } from 'uuid';
 
+import { Car } from '@modules/cars/infra/typeorm/entities/Car';
+
 @Entity('rentals')
 class Rental {
   @PrimaryColumn()
   id: string;
+
+  @ManyToOne(() => Car)
+  @JoinColumn({ name: 'car_id' })
+  car: Car;
 
   @Column()
   car_id: string;
@@ -39,7 +47,6 @@ class Rental {
   constructor() {
     if (!this.id) {
       this.id = uuid();
-      this.created_at = new Date();
     }
   }
 }
